parser.automaton
State 0:
program' -> . program [ # ]
-- On T_Void shift to state 1
-- On T_Int shift to state 2
-- On T_Double shift to state 3
-- On T_Char shift to state 4
-- On T_Bool shift to state 5
-- On variable_declation shift to state 6
-- On type_i shift to state 7
-- On result_type shift to state 101
-- On program shift to state 167
-- On nonempty_list(declation) shift to state 168
-- On function_def shift to state 163
-- On function_declation shift to state 164
-- On declation shift to state 170
-- On basic_type shift to state 83

State 1:
result_type -> T_Void . [ T_Id ]
-- On T_Id reduce production result_type -> T_Void 

State 2:
basic_type -> T_Int . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbracket T_Lbrace T_Incr T_Id T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production basic_type -> T_Int 
-- On T_Semicolon reduce production basic_type -> T_Int 
-- On T_Rparen reduce production basic_type -> T_Int 
-- On T_Rbracket reduce production basic_type -> T_Int 
-- On T_Rbrace reduce production basic_type -> T_Int 
-- On T_Quest reduce production basic_type -> T_Int 
-- On T_PlusEq reduce production basic_type -> T_Int 
-- On T_Or reduce production basic_type -> T_Int 
-- On T_Neq reduce production basic_type -> T_Int 
-- On T_Mul reduce production basic_type -> T_Int 
-- On T_Mod_eq reduce production basic_type -> T_Int 
-- On T_Mod reduce production basic_type -> T_Int 
-- On T_Minus_eq reduce production basic_type -> T_Int 
-- On T_Leq reduce production basic_type -> T_Int 
-- On T_Le reduce production basic_type -> T_Int 
-- On T_Lbracket reduce production basic_type -> T_Int 
-- On T_Lbrace reduce production basic_type -> T_Int 
-- On T_Incr reduce production basic_type -> T_Int 
-- On T_Id reduce production basic_type -> T_Int 
-- On T_Gr reduce production basic_type -> T_Int 
-- On T_Geq reduce production basic_type -> T_Int 
-- On T_Equal reduce production basic_type -> T_Int 
-- On T_Eq reduce production basic_type -> T_Int 
-- On T_Dot_eq reduce production basic_type -> T_Int 
-- On T_Div_eq reduce production basic_type -> T_Int 
-- On T_Div reduce production basic_type -> T_Int 
-- On T_Decr reduce production basic_type -> T_Int 
-- On T_Comma reduce production basic_type -> T_Int 
-- On T_Colon reduce production basic_type -> T_Int 
-- On T_And reduce production basic_type -> T_Int 
-- On T_Add reduce production basic_type -> T_Int 

State 3:
basic_type -> T_Double . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbracket T_Lbrace T_Incr T_Id T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production basic_type -> T_Double 
-- On T_Semicolon reduce production basic_type -> T_Double 
-- On T_Rparen reduce production basic_type -> T_Double 
-- On T_Rbracket reduce production basic_type -> T_Double 
-- On T_Rbrace reduce production basic_type -> T_Double 
-- On T_Quest reduce production basic_type -> T_Double 
-- On T_PlusEq reduce production basic_type -> T_Double 
-- On T_Or reduce production basic_type -> T_Double 
-- On T_Neq reduce production basic_type -> T_Double 
-- On T_Mul reduce production basic_type -> T_Double 
-- On T_Mod_eq reduce production basic_type -> T_Double 
-- On T_Mod reduce production basic_type -> T_Double 
-- On T_Minus_eq reduce production basic_type -> T_Double 
-- On T_Leq reduce production basic_type -> T_Double 
-- On T_Le reduce production basic_type -> T_Double 
-- On T_Lbracket reduce production basic_type -> T_Double 
-- On T_Lbrace reduce production basic_type -> T_Double 
-- On T_Incr reduce production basic_type -> T_Double 
-- On T_Id reduce production basic_type -> T_Double 
-- On T_Gr reduce production basic_type -> T_Double 
-- On T_Geq reduce production basic_type -> T_Double 
-- On T_Equal reduce production basic_type -> T_Double 
-- On T_Eq reduce production basic_type -> T_Double 
-- On T_Dot_eq reduce production basic_type -> T_Double 
-- On T_Div_eq reduce production basic_type -> T_Double 
-- On T_Div reduce production basic_type -> T_Double 
-- On T_Decr reduce production basic_type -> T_Double 
-- On T_Comma reduce production basic_type -> T_Double 
-- On T_Colon reduce production basic_type -> T_Double 
-- On T_And reduce production basic_type -> T_Double 
-- On T_Add reduce production basic_type -> T_Double 

State 4:
basic_type -> T_Char . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbracket T_Lbrace T_Incr T_Id T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production basic_type -> T_Char 
-- On T_Semicolon reduce production basic_type -> T_Char 
-- On T_Rparen reduce production basic_type -> T_Char 
-- On T_Rbracket reduce production basic_type -> T_Char 
-- On T_Rbrace reduce production basic_type -> T_Char 
-- On T_Quest reduce production basic_type -> T_Char 
-- On T_PlusEq reduce production basic_type -> T_Char 
-- On T_Or reduce production basic_type -> T_Char 
-- On T_Neq reduce production basic_type -> T_Char 
-- On T_Mul reduce production basic_type -> T_Char 
-- On T_Mod_eq reduce production basic_type -> T_Char 
-- On T_Mod reduce production basic_type -> T_Char 
-- On T_Minus_eq reduce production basic_type -> T_Char 
-- On T_Leq reduce production basic_type -> T_Char 
-- On T_Le reduce production basic_type -> T_Char 
-- On T_Lbracket reduce production basic_type -> T_Char 
-- On T_Lbrace reduce production basic_type -> T_Char 
-- On T_Incr reduce production basic_type -> T_Char 
-- On T_Id reduce production basic_type -> T_Char 
-- On T_Gr reduce production basic_type -> T_Char 
-- On T_Geq reduce production basic_type -> T_Char 
-- On T_Equal reduce production basic_type -> T_Char 
-- On T_Eq reduce production basic_type -> T_Char 
-- On T_Dot_eq reduce production basic_type -> T_Char 
-- On T_Div_eq reduce production basic_type -> T_Char 
-- On T_Div reduce production basic_type -> T_Char 
-- On T_Decr reduce production basic_type -> T_Char 
-- On T_Comma reduce production basic_type -> T_Char 
-- On T_Colon reduce production basic_type -> T_Char 
-- On T_And reduce production basic_type -> T_Char 
-- On T_Add reduce production basic_type -> T_Char 

State 5:
basic_type -> T_Bool . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbracket T_Lbrace T_Incr T_Id T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production basic_type -> T_Bool 
-- On T_Semicolon reduce production basic_type -> T_Bool 
-- On T_Rparen reduce production basic_type -> T_Bool 
-- On T_Rbracket reduce production basic_type -> T_Bool 
-- On T_Rbrace reduce production basic_type -> T_Bool 
-- On T_Quest reduce production basic_type -> T_Bool 
-- On T_PlusEq reduce production basic_type -> T_Bool 
-- On T_Or reduce production basic_type -> T_Bool 
-- On T_Neq reduce production basic_type -> T_Bool 
-- On T_Mul reduce production basic_type -> T_Bool 
-- On T_Mod_eq reduce production basic_type -> T_Bool 
-- On T_Mod reduce production basic_type -> T_Bool 
-- On T_Minus_eq reduce production basic_type -> T_Bool 
-- On T_Leq reduce production basic_type -> T_Bool 
-- On T_Le reduce production basic_type -> T_Bool 
-- On T_Lbracket reduce production basic_type -> T_Bool 
-- On T_Lbrace reduce production basic_type -> T_Bool 
-- On T_Incr reduce production basic_type -> T_Bool 
-- On T_Id reduce production basic_type -> T_Bool 
-- On T_Gr reduce production basic_type -> T_Bool 
-- On T_Geq reduce production basic_type -> T_Bool 
-- On T_Equal reduce production basic_type -> T_Bool 
-- On T_Eq reduce production basic_type -> T_Bool 
-- On T_Dot_eq reduce production basic_type -> T_Bool 
-- On T_Div_eq reduce production basic_type -> T_Bool 
-- On T_Div reduce production basic_type -> T_Bool 
-- On T_Decr reduce production basic_type -> T_Bool 
-- On T_Comma reduce production basic_type -> T_Bool 
-- On T_Colon reduce production basic_type -> T_Bool 
-- On T_And reduce production basic_type -> T_Bool 
-- On T_Add reduce production basic_type -> T_Bool 

State 6:
declation -> variable_declation . [ T_Void T_True T_Sub T_Semicolon T_Return T_Rbrace T_Null T_Not T_New T_Mul T_Lparen T_Lbrace T_Int T_Incr T_If T_Id T_For T_False T_Eof T_Double T_Del T_Decr T_Cont T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Char T_Break T_Bool T_Amp T_Add ]
-- On T_Void reduce production declation -> variable_declation 
-- On T_True reduce production declation -> variable_declation 
-- On T_Sub reduce production declation -> variable_declation 
-- On T_Semicolon reduce production declation -> variable_declation 
-- On T_Return reduce production declation -> variable_declation 
-- On T_Rbrace reduce production declation -> variable_declation 
-- On T_Null reduce production declation -> variable_declation 
-- On T_Not reduce production declation -> variable_declation 
-- On T_New reduce production declation -> variable_declation 
-- On T_Mul reduce production declation -> variable_declation 
-- On T_Lparen reduce production declation -> variable_declation 
-- On T_Lbrace reduce production declation -> variable_declation 
-- On T_Int reduce production declation -> variable_declation 
-- On T_Incr reduce production declation -> variable_declation 
-- On T_If reduce production declation -> variable_declation 
-- On T_Id reduce production declation -> variable_declation 
-- On T_For reduce production declation -> variable_declation 
-- On T_False reduce production declation -> variable_declation 
-- On T_Eof reduce production declation -> variable_declation 
-- On T_Double reduce production declation -> variable_declation 
-- On T_Del reduce production declation -> variable_declation 
-- On T_Decr reduce production declation -> variable_declation 
-- On T_Cont reduce production declation -> variable_declation 
-- On T_Const_String reduce production declation -> variable_declation 
-- On T_Const_Real reduce production declation -> variable_declation 
-- On T_Const_Int reduce production declation -> variable_declation 
-- On T_Const_Char reduce production declation -> variable_declation 
-- On T_Char reduce production declation -> variable_declation 
-- On T_Break reduce production declation -> variable_declation 
-- On T_Bool reduce production declation -> variable_declation 
-- On T_Amp reduce production declation -> variable_declation 
-- On T_Add reduce production declation -> variable_declation 

State 7:
result_type -> type_i . [ T_Id ]
variable_declation -> type_i . declator_plus [ T_Void T_True T_Sub T_Semicolon T_Return T_Rbrace T_Null T_Not T_New T_Mul T_Lparen T_Lbrace T_Int T_Incr T_If T_Id T_For T_False T_Eof T_Double T_Del T_Decr T_Cont T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Char T_Break T_Bool T_Amp T_Add ]
-- On T_Id shift to state 8
-- On declator_plus shift to state 96
-- On declator shift to state 97
-- On T_Id reduce production result_type -> type_i 
** Conflict on T_Id

State 8:
declator -> T_Id . option(test) [ T_Semicolon T_Comma ]
-- On T_Lbracket shift to state 9
-- On test shift to state 94
-- On option(test) shift to state 95
-- On T_Semicolon reduce production option(test) -> 
-- On T_Comma reduce production option(test) -> 

State 9:
test -> T_Lbracket . constant_expression T_Rbracket [ T_Semicolon T_Comma ]
-- On T_True shift to state 10
-- On T_Sub shift to state 11
-- On T_Null shift to state 12
-- On T_Not shift to state 13
-- On T_New shift to state 14
-- On T_Mul shift to state 17
-- On T_Lparen shift to state 18
-- On T_Incr shift to state 19
-- On T_Id shift to state 20
-- On T_False shift to state 22
-- On T_Del shift to state 23
-- On T_Decr shift to state 24
-- On T_Const_String shift to state 25
-- On T_Const_Real shift to state 26
-- On T_Const_Int shift to state 27
-- On T_Const_Char shift to state 28
-- On T_Amp shift to state 29
-- On T_Add shift to state 30
-- On unary_operator shift to state 31
-- On unary_assig shift to state 32
-- On expression shift to state 91
-- On constant_expression shift to state 92

State 10:
expression -> T_True . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production expression -> T_True 
-- On T_Semicolon reduce production expression -> T_True 
-- On T_Rparen reduce production expression -> T_True 
-- On T_Rbracket reduce production expression -> T_True 
-- On T_Rbrace reduce production expression -> T_True 
-- On T_Quest reduce production expression -> T_True 
-- On T_PlusEq reduce production expression -> T_True 
-- On T_Or reduce production expression -> T_True 
-- On T_Neq reduce production expression -> T_True 
-- On T_Mul reduce production expression -> T_True 
-- On T_Mod_eq reduce production expression -> T_True 
-- On T_Mod reduce production expression -> T_True 
-- On T_Minus_eq reduce production expression -> T_True 
-- On T_Leq reduce production expression -> T_True 
-- On T_Le reduce production expression -> T_True 
-- On T_Lbrace reduce production expression -> T_True 
-- On T_Incr reduce production expression -> T_True 
-- On T_Gr reduce production expression -> T_True 
-- On T_Geq reduce production expression -> T_True 
-- On T_Equal reduce production expression -> T_True 
-- On T_Eq reduce production expression -> T_True 
-- On T_Dot_eq reduce production expression -> T_True 
-- On T_Div_eq reduce production expression -> T_True 
-- On T_Div reduce production expression -> T_True 
-- On T_Decr reduce production expression -> T_True 
-- On T_Comma reduce production expression -> T_True 
-- On T_Colon reduce production expression -> T_True 
-- On T_And reduce production expression -> T_True 
-- On T_Add reduce production expression -> T_True 

State 11:
unary_operator -> T_Sub . [ T_True T_Sub T_Null T_Not T_New T_Mul T_Lparen T_Incr T_Id T_False T_Del T_Decr T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Amp T_Add ]
-- On T_True reduce production unary_operator -> T_Sub 
-- On T_Sub reduce production unary_operator -> T_Sub 
-- On T_Null reduce production unary_operator -> T_Sub 
-- On T_Not reduce production unary_operator -> T_Sub 
-- On T_New reduce production unary_operator -> T_Sub 
-- On T_Mul reduce production unary_operator -> T_Sub 
-- On T_Lparen reduce production unary_operator -> T_Sub 
-- On T_Incr reduce production unary_operator -> T_Sub 
-- On T_Id reduce production unary_operator -> T_Sub 
-- On T_False reduce production unary_operator -> T_Sub 
-- On T_Del reduce production unary_operator -> T_Sub 
-- On T_Decr reduce production unary_operator -> T_Sub 
-- On T_Const_String reduce production unary_operator -> T_Sub 
-- On T_Const_Real reduce production unary_operator -> T_Sub 
-- On T_Const_Int reduce production unary_operator -> T_Sub 
-- On T_Const_Char reduce production unary_operator -> T_Sub 
-- On T_Amp reduce production unary_operator -> T_Sub 
-- On T_Add reduce production unary_operator -> T_Sub 

State 12:
expression -> T_Null . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Sub reduce production expression -> T_Null 
-- On T_Semicolon reduce production expression -> T_Null 
-- On T_Rparen reduce production expression -> T_Null 
-- On T_Rbracket reduce production expression -> T_Null 
-- On T_Rbrace reduce production expression -> T_Null 
-- On T_Quest reduce production expression -> T_Null 
-- On T_PlusEq reduce production expression -> T_Null 
-- On T_Or reduce production expression -> T_Null 
-- On T_Neq reduce production expression -> T_Null 
-- On T_Mul reduce production expression -> T_Null 
-- On T_Mod_eq reduce production expression -> T_Null 
-- On T_Mod reduce production expression -> T_Null 
-- On T_Minus_eq reduce production expression -> T_Null 
-- On T_Leq reduce production expression -> T_Null 
-- On T_Le reduce production expression -> T_Null 
-- On T_Lbrace reduce production expression -> T_Null 
-- On T_Incr reduce production expression -> T_Null 
-- On T_Gr reduce production expression -> T_Null 
-- On T_Geq reduce production expression -> T_Null 
-- On T_Equal reduce production expression -> T_Null 
-- On T_Eq reduce production expression -> T_Null 
-- On T_Dot_eq reduce production expression -> T_Null 
-- On T_Div_eq reduce production expression -> T_Null 
-- On T_Div reduce production expression -> T_Null 
-- On T_Decr reduce production expression -> T_Null 
-- On T_Comma reduce production expression -> T_Null 
-- On T_Colon reduce production expression -> T_Null 
-- On T_And reduce production expression -> T_Null 
-- On T_Add reduce production expression -> T_Null 

State 13:
unary_operator -> T_Not . [ T_True T_Sub T_Null T_Not T_New T_Mul T_Lparen T_Incr T_Id T_False T_Del T_Decr T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Amp T_Add ]
-- On T_True reduce production unary_operator -> T_Not 
-- On T_Sub reduce production unary_operator -> T_Not 
-- On T_Null reduce production unary_operator -> T_Not 
-- On T_Not reduce production unary_operator -> T_Not 
-- On T_New reduce production unary_operator -> T_Not 
-- On T_Mul reduce production unary_operator -> T_Not 
-- On T_Lparen reduce production unary_operator -> T_Not 
-- On T_Incr reduce production unary_operator -> T_Not 
-- On T_Id reduce production unary_operator -> T_Not 
-- On T_False reduce production unary_operator -> T_Not 
-- On T_Del reduce production unary_operator -> T_Not 
-- On T_Decr reduce production unary_operator -> T_Not 
-- On T_Const_String reduce production unary_operator -> T_Not 
-- On T_Const_Real reduce production unary_operator -> T_Not 
-- On T_Const_Int reduce production unary_operator -> T_Not 
-- On T_Const_Char reduce production unary_operator -> T_Not 
-- On T_Amp reduce production unary_operator -> T_Not 
-- On T_Add reduce production unary_operator -> T_Not 

State 14:
expression -> T_New . type_i option(test8) [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Int shift to state 2
-- On T_Double shift to state 3
-- On T_Char shift to state 4
-- On T_Bool shift to state 5
-- On type_i shift to state 15
-- On basic_type shift to state 83

State 15:
expression -> T_New type_i . option(test8) [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Lbracket shift to state 16
-- On test8 shift to state 89
-- On option(test8) shift to state 90
-- On T_Sub reduce production option(test8) -> 
-- On T_Semicolon reduce production option(test8) -> 
-- On T_Rparen reduce production option(test8) -> 
-- On T_Rbracket reduce production option(test8) -> 
-- On T_Rbrace reduce production option(test8) -> 
-- On T_Quest reduce production option(test8) -> 
-- On T_PlusEq reduce production option(test8) -> 
-- On T_Or reduce production option(test8) -> 
-- On T_Neq reduce production option(test8) -> 
-- On T_Mul reduce production option(test8) -> 
-- On T_Mod_eq reduce production option(test8) -> 
-- On T_Mod reduce production option(test8) -> 
-- On T_Minus_eq reduce production option(test8) -> 
-- On T_Leq reduce production option(test8) -> 
-- On T_Le reduce production option(test8) -> 
-- On T_Lbrace reduce production option(test8) -> 
-- On T_Incr reduce production option(test8) -> 
-- On T_Gr reduce production option(test8) -> 
-- On T_Geq reduce production option(test8) -> 
-- On T_Equal reduce production option(test8) -> 
-- On T_Eq reduce production option(test8) -> 
-- On T_Dot_eq reduce production option(test8) -> 
-- On T_Div_eq reduce production option(test8) -> 
-- On T_Div reduce production option(test8) -> 
-- On T_Decr reduce production option(test8) -> 
-- On T_Comma reduce production option(test8) -> 
-- On T_Colon reduce production option(test8) -> 
-- On T_And reduce production option(test8) -> 
-- On T_Add reduce production option(test8) -> 

State 16:
test8 -> T_Lbracket . expression T_Rbracket [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_True shift to state 10
-- On T_Sub shift to state 11
-- On T_Null shift to state 12
-- On T_Not shift to state 13
-- On T_New shift to state 14
-- On T_Mul shift to state 17
-- On T_Lparen shift to state 18
-- On T_Incr shift to state 19
-- On T_Id shift to state 20
-- On T_False shift to state 22
-- On T_Del shift to state 23
-- On T_Decr shift to state 24
-- On T_Const_String shift to state 25
-- On T_Const_Real shift to state 26
-- On T_Const_Int shift to state 27
-- On T_Const_Char shift to state 28
-- On T_Amp shift to state 29
-- On T_Add shift to state 30
-- On unary_operator shift to state 31
-- On unary_assig shift to state 32
-- On expression shift to state 87

State 17:
unary_operator -> T_Mul . [ T_True T_Sub T_Null T_Not T_New T_Mul T_Lparen T_Incr T_Id T_False T_Del T_Decr T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Amp T_Add ]
-- On T_True reduce production unary_operator -> T_Mul 
-- On T_Sub reduce production unary_operator -> T_Mul 
-- On T_Null reduce production unary_operator -> T_Mul 
-- On T_Not reduce production unary_operator -> T_Mul 
-- On T_New reduce production unary_operator -> T_Mul 
-- On T_Mul reduce production unary_operator -> T_Mul 
-- On T_Lparen reduce production unary_operator -> T_Mul 
-- On T_Incr reduce production unary_operator -> T_Mul 
-- On T_Id reduce production unary_operator -> T_Mul 
-- On T_False reduce production unary_operator -> T_Mul 
-- On T_Del reduce production unary_operator -> T_Mul 
-- On T_Decr reduce production unary_operator -> T_Mul 
-- On T_Const_String reduce production unary_operator -> T_Mul 
-- On T_Const_Real reduce production unary_operator -> T_Mul 
-- On T_Const_Int reduce production unary_operator -> T_Mul 
-- On T_Const_Char reduce production unary_operator -> T_Mul 
-- On T_Amp reduce production unary_operator -> T_Mul 
-- On T_Add reduce production unary_operator -> T_Mul 

State 18:
expression -> T_Lparen . expression T_Rparen [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
expression -> T_Lparen . type_i T_Rparen expression [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_True shift to state 10
-- On T_Sub shift to state 11
-- On T_Null shift to state 12
-- On T_Not shift to state 13
-- On T_New shift to state 14
-- On T_Mul shift to state 17
-- On T_Lparen shift to state 18
-- On T_Int shift to state 2
-- On T_Incr shift to state 19
-- On T_Id shift to state 20
-- On T_False shift to state 22
-- On T_Double shift to state 3
-- On T_Del shift to state 23
-- On T_Decr shift to state 24
-- On T_Const_String shift to state 25
-- On T_Const_Real shift to state 26
-- On T_Const_Int shift to state 27
-- On T_Const_Char shift to state 28
-- On T_Char shift to state 4
-- On T_Bool shift to state 5
-- On T_Amp shift to state 29
-- On T_Add shift to state 30
-- On unary_operator shift to state 31
-- On unary_assig shift to state 32
-- On type_i shift to state 78
-- On expression shift to state 81
-- On basic_type shift to state 83

State 19:
unary_assig -> T_Incr . [ T_True T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Null T_Not T_New T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Lparen T_Leq T_Le T_Lbrace T_Incr T_Id T_Gr T_Geq T_False T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Del T_Decr T_Const_String T_Const_Real T_Const_Int T_Const_Char T_Comma T_Colon T_And T_Amp T_Add ]
-- On T_True reduce production unary_assig -> T_Incr 
-- On T_Sub reduce production unary_assig -> T_Incr 
-- On T_Semicolon reduce production unary_assig -> T_Incr 
-- On T_Rparen reduce production unary_assig -> T_Incr 
-- On T_Rbracket reduce production unary_assig -> T_Incr 
-- On T_Rbrace reduce production unary_assig -> T_Incr 
-- On T_Quest reduce production unary_assig -> T_Incr 
-- On T_PlusEq reduce production unary_assig -> T_Incr 
-- On T_Or reduce production unary_assig -> T_Incr 
-- On T_Null reduce production unary_assig -> T_Incr 
-- On T_Not reduce production unary_assig -> T_Incr 
-- On T_New reduce production unary_assig -> T_Incr 
-- On T_Neq reduce production unary_assig -> T_Incr 
-- On T_Mul reduce production unary_assig -> T_Incr 
-- On T_Mod_eq reduce production unary_assig -> T_Incr 
-- On T_Mod reduce production unary_assig -> T_Incr 
-- On T_Minus_eq reduce production unary_assig -> T_Incr 
-- On T_Lparen reduce production unary_assig -> T_Incr 
-- On T_Leq reduce production unary_assig -> T_Incr 
-- On T_Le reduce production unary_assig -> T_Incr 
-- On T_Lbrace reduce production unary_assig -> T_Incr 
-- On T_Incr reduce production unary_assig -> T_Incr 
-- On T_Id reduce production unary_assig -> T_Incr 
-- On T_Gr reduce production unary_assig -> T_Incr 
-- On T_Geq reduce production unary_assig -> T_Incr 
-- On T_False reduce production unary_assig -> T_Incr 
-- On T_Equal reduce production unary_assig -> T_Incr 
-- On T_Eq reduce production unary_assig -> T_Incr 
-- On T_Dot_eq reduce production unary_assig -> T_Incr 
-- On T_Div_eq reduce production unary_assig -> T_Incr 
-- On T_Div reduce production unary_assig -> T_Incr 
-- On T_Del reduce production unary_assig -> T_Incr 
-- On T_Decr reduce production unary_assig -> T_Incr 
-- On T_Const_String reduce production unary_assig -> T_Incr 
-- On T_Const_Real reduce production unary_assig -> T_Incr 
-- On T_Const_Int reduce production unary_assig -> T_Incr 
-- On T_Const_Char reduce production unary_assig -> T_Incr 
-- On T_Comma reduce production unary_assig -> T_Incr 
-- On T_Colon reduce production unary_assig -> T_Incr 
-- On T_And reduce production unary_assig -> T_Incr 
-- On T_Amp reduce production unary_assig -> T_Incr 
-- On T_Add reduce production unary_assig -> T_Incr 

State 20:
expression -> T_Id . [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
expression -> T_Id . T_Lparen option(expression_list) T_Rparen [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_Lparen shift to state 21
-- On T_Sub reduce production expression -> T_Id 
-- On T_Semicolon reduce production expression -> T_Id 
-- On T_Rparen reduce production expression -> T_Id 
-- On T_Rbracket reduce production expression -> T_Id 
-- On T_Rbrace reduce production expression -> T_Id 
-- On T_Quest reduce production expression -> T_Id 
-- On T_PlusEq reduce production expression -> T_Id 
-- On T_Or reduce production expression -> T_Id 
-- On T_Neq reduce production expression -> T_Id 
-- On T_Mul reduce production expression -> T_Id 
-- On T_Mod_eq reduce production expression -> T_Id 
-- On T_Mod reduce production expression -> T_Id 
-- On T_Minus_eq reduce production expression -> T_Id 
-- On T_Leq reduce production expression -> T_Id 
-- On T_Le reduce production expression -> T_Id 
-- On T_Lbrace reduce production expression -> T_Id 
-- On T_Incr reduce production expression -> T_Id 
-- On T_Gr reduce production expression -> T_Id 
-- On T_Geq reduce production expression -> T_Id 
-- On T_Equal reduce production expression -> T_Id 
-- On T_Eq reduce production expression -> T_Id 
-- On T_Dot_eq reduce production expression -> T_Id 
-- On T_Div_eq reduce production expression -> T_Id 
-- On T_Div reduce production expression -> T_Id 
-- On T_Decr reduce production expression -> T_Id 
-- On T_Comma reduce production expression -> T_Id 
-- On T_Colon reduce production expression -> T_Id 
-- On T_And reduce production expression -> T_Id 
-- On T_Add reduce production expression -> T_Id 

State 21:
expression -> T_Id T_Lparen . option(expression_list) T_Rparen [ T_Sub T_Semicolon T_Rparen T_Rbracket T_Rbrace T_Quest T_PlusEq T_Or T_Neq T_Mul T_Mod_eq T_Mod T_Minus_eq T_Leq T_Le T_Lbrace T_Incr T_Gr T_Geq T_Equal T_Eq T_Dot_eq T_Div_eq T_Div T_Decr T_Comma T_Colon T_And T_Add ]
-- On T_True shift to state 10
-- On T_Sub shift to state 11
-- On T_Null shift to state 12
-- On T_Not shift to state 13
-- On T_New shift to state 14
-- On T_Mul shift to state 17
-- On T_Lparen shift to state 18
-- On T_Incr shift to state 19
-- On T_Id shift to state 20
-- On T_False shift to state 22
-- On T_Del shift to state 23
-- On T_Decr shift to state 24
-- On T_Const_String shift to state 25
-- On T_Const_Real shift to state 26
-- On T_Const_Int shift to state 27
-- On T_Const_Char shift to state 28
-- On T_Amp shift to state 29
-- On T_Add shift to state 30
-- On unary_operator shift to state 31
-- On unary_assig shift to state 32
-- On option(expression_list) shift to state 68
-- On expression_list shift to state 70
-- On expression shift to state 71
-- On T_Rparen reduce production option(expression_list) -> 
